--- a/static/index.html
+++ b/static/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Auto Voice Assistant</title>
+    <title>Real-Time Voice Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>🎙️ Real-Time Voice Assistant</h1>
+        <h1>🎤 Real-Time Voice Assistant</h1>
         <div id="status">Ready to listen...</div>
         <div id="messages"></div>
         <audio id="player" hidden></audio>
     </div>
-    
-    <!-- VAD Library -->
     <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@0.0.22/dist/bundle.min.js"></script>
     <script src="/static/script.js"></script>
 </body>
 </html>
+
 
