--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🎤 Voice Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
+    <!-- Load VAD library first -->
+    <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@0.0.22/dist/bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,11 +31,10 @@
         </div>
     </div>
 
-    <!-- VAD Library -->
-    <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@0.0.22/dist/bundle.min.js"></script>
     <script src="/static/script.js"></script>
 </body>
 </html>
+
 
 
 
