--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <title>🎤 Voice Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
     <!-- Load VAD library first -->
-    <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@0.0.22/dist/bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@0.0.22/dist/vad.umd.min.js"></script>
 </head>
 <body>
     <div class="container">
