--- a/static/index.html
+++ b/static/index.html
@@ -1,37 +1,28 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎤 Realtime Voice Assistant</title>
+    <title>AI Voice Assistant</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>🎙️ Realtime AI Assistant</h1>
-            <p>Real-time conversation with GPT-4o</p>
-        </header>
-
-        <div class="chat-container">
+        <div class="header">
+            <button id="startBtn">🚀 Start Chat</button>
+            <div id="status">Disconnected</div>
+        </div>
+        
+        <div class="content">
             <div id="chatHistory" class="chat-history"></div>
-        </div>
-
-        <div class="controls">
-            <button id="startBtn" class="start-btn">
-                <span class="btn-text">🚀 Start Realtime Chat</span>
-            </button>
-            <div id="status" class="status">Click start to begin</div>
-        </div>
-
-        <div class="audio-controls">
-            <canvas id="audioVisualization" width="400" height="100"></canvas>
+            <canvas id="audioVisualization"></canvas>
         </div>
     </div>
-
     <script src="/static/script.js"></script>
 </body>
 </html>
+
 
 
 
