--- a/static/index.html
+++ b/static/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <button id="startBtn">🚀 Start Chat</button>
+            <button id="recordBtn">🚀 Start Chat</button>
             <div id="status">Disconnected</div>
         </div>
         
