--- a/static/index.html
+++ b/static/index.html
@@ -30,6 +30,8 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.js"></script>
+
     <!-- Load mic-vad -->
     <script src="https://cdn.jsdelivr.net/npm/mic-vad/dist/mic-vad.min.js"></script>
     <script src="/static/script.js"></script>
