--- a/static/index.html
+++ b/static/index.html
@@ -31,12 +31,11 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.js"></script>
-
-    <!-- Load mic-vad -->
-    <script src="https://cdn.jsdelivr.net/npm/mic-vad/dist/mic-vad.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@ricky0123/vad-web@latest/dist/bundle.min.js"></script>
     <script src="/static/script.js"></script>
 </body>
 </html>
+
 
 
 
