--- a/static/index.html
+++ b/static/index.html
@@ -1,35 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎤 Realtime Voice Assistant</title>
-    <link rel="stylesheet" href="/static/style.css">
+  <title>Realtime Voice Assistant</title>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>🎙️ Realtime AI Assistant</h1>
-            <p>Real-time conversation with GPT-4o</p>
-        </header>
-
-        <div class="chat-container">
-            <div id="chatHistory" class="chat-history"></div>
-        </div>
-
-        <div class="controls">
-            <button id="startBtn" class="start-btn">
-                <span class="btn-text">🚀 Start Realtime Chat</span>
-            </button>
-            <div id="status" class="status">Click start to begin</div>
-        </div>
-
-        <div class="audio-controls">
-            <canvas id="audioVisualization" width="400" height="100"></canvas>
-        </div>
-    </div>
-
-    <script src="/static/script.js"></script>
+  <h2>GPT-4o Realtime Voice Assistant</h2>
+  <button id="startBtn">Start</button>
+  <p id="status">Idle</p>
+  <script src="/static/script.js"></script>
 </body>
 </html>
 
